# CplusplusWeekly

./: README.md
Lambdas/: CMakeLists.txt  Lambdas.cbp  custom_iterator.cpp  ep133.cpp  ep37.cpp  ep51.cpp  for_each_loop.cpp  lambda.cpp  variadic_function.cpp
Lambdas/Christmas_Ch1/: CMakeLists.txt  ep37.cpp  ep40.cpp  ep97.cpp  exercise.cpp
Lambdas/Christmas_Ch2/: CMakeLists.txt  ep150.cpp  ep184.cpp  ep48.cpp  ep49.cpp  exercise.cpp
Lambdas/Christmas_Ch3/: ep93.cpp  ep95.cpp
Lambdas/Christmas_Ch4/: ep171.cpp
parallel/: CMakeLists.txt  block_cyclic_scatter.cc  sum_factor.cc  test_mpi_nonblocking.cc  tools.h
template_metaprogramming/: CMakeLists.txt  KL_2017.cc  Makefile  OOP.cc  cppcon2014_p1.cpp  jacobi.cpp
