if (APPLE)
    cmake_minimum_required(VERSION 3.20)
    set(CMAKE_CXX_STANDARD 20)
elseif (LINUX)
    cmake_minimum_required(VERSION 3.10)
endif ()

project(Lambdas)

add_executable(Lambdas main.cpp)
add_executable(for_each_loop for_each_loop.cpp)
add_executable(lambda lambda.cpp)
add_executable(ep133 ep133.cpp)
add_executable(ep37 ep37.cpp)
add_executable(ep51 ep51.cpp)
add_executable(ep40 ep40.cpp)